<resources>
    <string name="app_name">Flock</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="submit">Submit</string>
    <string name="date_of_Birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="login_title">Login</string>
    <string name="create_account">Create </string>
    <string name="age">Age</string>
    <string name="createAccountButton">Create Account</string>
    <string name="firstName">First Name</string>
    <string name="title_activity_main_hub">MainHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="gender">Gender</string>
    <string name="action_signout">Signout</string>
    <string name="action_add">Add Post</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="title_activity_maps">Map</string>
    <string name="button">Button</string>
    <string name="buttonb">Button</string>
    <string name="forgotPasswordTitle">Enter email:</string>
    <string name="create__account">Create Account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="repeat_your_email">Repeat your email</string>
    <string name="title_activity_fromto">Fromto</string>
    <string name="user_profile">User Profile</string>
    <string name="loginLogo">Flock</string>
    <string name="firstFrag">Main Fragment</string>
    <string name="profileFrag">Profile Placeholder</string>
    <string name="currentUserMainHub">Current User</string>
    <string name="currentUserEmailMainHub">john.doe@gmail.com</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>I Care Not to Answer</item>
    </string-array>
    <string name="title_activity_start">start</string>
    <string name="title_activity_destination">destination</string>
    <string name="confirm_destination">Confirm Destination</string>
    <string name="confirm_start">Confirm Start</string>
    <string name="borough">Borough</string>
    <string name="destination_train_station">Destination Train Station</string>
    <string name="train_station_name">Train Station Name</string>
    <string name="train_line">Train-line</string>
    <string name="destination">destination</string>
    <string name="pick_a_borough">Pick a Borough</string>
    <string name="pick_a_train_line">Pick a Train line</string>
    <string name="starting_train_station">Starting Train Station</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>
    <string-array name="borough_options">
        <item>Manhattan</item>
        <item>Queens</item>
        <item>Brooklyn</item>
        <item>Bronx</item>
        <item>Staten Island</item>
    </string-array>
    <string name="facebook_app_id">648056098576150</string>
    <string name="firebase_url">https://chat-sdk-v4.firebaseio.com</string>
    <!--<string name="firebase_root_path">firebase_demo_v4</string>-->
    <string name="firebase_root_path">firebase_v4_web_new_4</string>
    <string name="firebase_storage_url">gs://chat-sdk-v4.appspot.com</string>
    <string name="firebase_cloud_messaging_server_key">AAAA_WvJyeI:APA91bFIDYoxnbFTub61SKCh8-RZrElzdkZpzyV3paGFlRWonMzq33zQmQW3ub5hDXLuRaipwtoHSoDKXkZlN5DRb_EYdrxtaDptmvZKCYBPKI-4RqTK9wVLOJvgc5X3bVWLfpNSJO_tLK2pnmhfpHDw2Zs-5L2yug</string>
    <string name="eventUserImage">User Image</string>
    <string name="eventTitle">Available Events</string>
    <string name="messageTime">time</string>
    <string-array name="event_menu">
        <item>User's Profile</item>
        <item>Chat with User</item>
        <item>Delete Event</item>
    </string-array>

    <string name="sign_out">Sign Out</string>
    <string name="friends_list">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="eventDisplayName">DISPLAY NAME</string>
    <string name="startTime">Start Time</string>
</resources>
