<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.natia.flock1.LogIn"
    android:background="@color/Green">

    <EditText
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:hint="@string/first_name"
        android:textSize="30sp"
        android:textColorHint="@color/Text_1"
        android:textColor="@color/Text_1"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/textView2" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_marginTop="33dp"
        android:textSize="30sp"
        android:textColorHint="@color/Text_1"
        android:textColor="@color/Text_1"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:hint="@string/username"
        android:textSize="30sp"
        android:textColorHint="@color/Text_1"
        android:textColor="@color/Text_1"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView5" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_adress"
        android:textSize="30sp"
        android:inputType="text"
        android:textColorHint="@color/Text_1"
        android:textColor="@color/Text_1"
        android:layout_marginEnd="86dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp" />

    <EditText
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/Text_1"
        android:textColor="@color/Text_1"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" 
        android:background="@drawable/button_style"/>


</RelativeLayout>
