<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.natia.flock1.CreateAccountActivity"
    android:background="@color/Green">

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:text="@string/starting_train_station"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textColor="@color/Text_1"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="34dp"
        tools:text="Starting Train Station" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="333dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
        android:entries="@array/borough_options"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="106dp" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="224dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_start"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="481dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/pick_a_borough"
        android:textColor="@color/Text_1"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="106dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_a_train_line"
        android:textColor="@color/Text_1"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train_station_name"
        android:textColor="@color/Text_1"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="333dp" />

</android.support.constraint.ConstraintLayout>