<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.natia.flock1.CreateAccountActivity"
    android:background="@color/Green">

    <EditText
        android:id="@+id/emailAct"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/emailAct"
        android:hint="@string/email"
        android:textColor="@color/Text_1"
        android:textColorHint="@color/Text_1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/firstNameAct"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePicAct" />

    <EditText
        android:id="@+id/firstNameAct"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:labelFor="@+id/firstNameAct"
        android:textColor="@color/Text_1"
        android:textColorHint="@color/Text_1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/lastNameAct"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAct"
        tools:hint="@string/first_name" />

    <EditText
        android:id="@+id/lastNameAct"
        android:layout_width="347dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:labelFor="@+id/lastNameAct"
        android:textAlignment="viewStart"
        android:textColor="@color/Text_1"
        android:textColorHint="@color/Text_1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/passwordAct"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameAct"
        tools:hint="@string/last_name" />


    <EditText
        android:id="@+id/passwordAct"
        android:layout_width="347dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:labelFor="@+id/passwordAct"
        android:textColor="@color/Text_1"
        android:textColorHint="@color/Text_1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/genderSpinnerAct"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameAct"
        tools:Password="@string/password" />


    <Button
        android:id="@+id/createAccountAct"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_style"
        android:labelFor="@+id/createAccountAct"
        android:textColor="@color/Green"
        android:textColorHint="@color/Text_2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageAct"
        app:layout_constraintVertical_bias="0.0"
        android:text="@string/create__account"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.49"
        android:layout_marginTop="33dp" />


    <EditText
        android:id="@+id/ageAct"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="date"
        android:labelFor="@+id/ageAct"
        android:textColor="@color/Text_1"
        android:textColorHint="@color/Text_1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/createAccountAct"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderSpinnerAct" />

    <Spinner
        android:id="@+id/genderSpinnerAct"
        android:layout_width="351dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:labelFor="@+id/genderAct"
        android:textColor="@color/Text_1"
        android:textColorHint="@color/Text_1"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordAct"
        app:layout_constraintBottom_toTopOf="@+id/ageAct">

    </Spinner>

    <ImageButton
        android:id="@+id/profilePicAct"
        android:layout_width="128dp"
        android:layout_height="117dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/Text_1"
        android:contentDescription="@string/profile_pic"
        android:cropToPadding="true"
        android:elevation="1dp"
        android:labelFor="@+id/profilePicAct"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/emailAct"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/neutral1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />



</android.support.constraint.ConstraintLayout>
